--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Intern Portal – IIT Patna</title>
+  <title>Intern Portal</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.0.0/remixicon.min.css">
   <script src="https://cdn.tailwindcss.com"></script>
@@ -40,7 +40,6 @@
 </head>
 <body class="bg-gray-50">
 
-  <!-- ✅ Navbar -->
   <nav class="bg-white shadow-md fixed w-full z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
       <div class="font-['Pacifico'] text-primary text-2xl">IITP</div>
@@ -48,7 +47,6 @@
     </div>
   </nav>
 
-  <!-- ✅ Page Title -->
   <div class="pt-24 text-center mb-6">
     <h1 class="text-3xl font-bold text-primary">Explore Our Interns</h1>
     <p class="text-gray-600">Guided by Dr. Rahul Mishra, IIT Patna</p>
@@ -63,8 +61,6 @@
   </button>
 </div>
 
-
-  <!-- ✅ Intern Cards Grid -->
   <div id="internGrid" class="max-w-6xl mx-auto px-4 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 pb-20">
     <!-- Sample Card -->
     <div class="card-glassmorphism rounded-lg p-5">
