--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intern Management Portal</title>
+      <link rel="icon" href="logo.webp" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Pacifico&display=swap"
       rel="stylesheet"
@@ -205,11 +206,10 @@
     <nav class="nav-glass fixed w-full z-50 animate-slide-in">
       <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
         <div class="flex items-center space-x-4">
-          <div class="glass-card rounded-2xl p-4 hover:scale-105 transition-transform">
-            <div class="font-['Pacifico'] text-white text-2xl animate-glow">IITP</div>
-          </div>
+            <img src="./logo.webp" alt="Sensor Lab Logo" class="w-10 h-10 rounded-full object-cover shadow-lg">
+
           <div class="text-white">
-            <div class="font-bold text-xl">Intern Management Portal</div>
+            <div class="font-bold text-xl">Sensor2ai Lab</div>
             <div class="text-sm opacity-80">Innovation & Excellence</div>
           </div>
         </div>
