--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intern Management Portal</title>
-      <link rel="icon" href="logo.webp" />
+    <link rel="icon" href="logo.webp" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Pacifico&display=swap"
       rel="stylesheet"
@@ -58,139 +58,7 @@
         },
       };
     </script>
-
-    <style>
-      body {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        background-attachment: fixed;
-        font-family: "Inter", sans-serif;
-        overflow-x: hidden;
-      }
-
-      .hero-bg {
-        background: linear-gradient(135deg, rgba(10, 36, 99, 0.9), rgba(62, 146, 204, 0.8)),
-                    url("https://images.unsplash.com/photo-1522199755839-a2bacb67c546?auto=format&fit=crop&w=1920&q=80");
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed;
-      }
-
-      .glass-card {
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(20px);
-        border: 1px solid rgba(255, 255, 255, 0.2);
-        box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
-        transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-      }
-
-      .glass-card:hover {
-        transform: translateY(-15px) scale(1.02);
-        box-shadow: 0 35px 60px rgba(0, 0, 0, 0.2);
-        background: rgba(255, 255, 255, 0.15);
-      }
-
-      .nav-glass {
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(20px);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      .btn-primary {
-        background: linear-gradient(135deg, #3E92CC, #0A2463);
-        box-shadow: 0 10px 25px rgba(10, 36, 99, 0.3);
-        transition: all 0.3s ease;
-      }
-
-      .btn-primary:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 15px 35px rgba(10, 36, 99, 0.4);
-      }
-
-      .btn-secondary {
-        background: linear-gradient(135deg, #FF6B6B, #FF8E8E);
-        box-shadow: 0 10px 25px rgba(255, 107, 107, 0.3);
-        transition: all 0.3s ease;
-      }
-
-      .btn-secondary:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 15px 35px rgba(255, 107, 107, 0.4);
-      }
-
-      .floating-elements {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        z-index: 1;
-      }
-
-      .floating-circle {
-        position: absolute;
-        border-radius: 50%;
-        background: rgba(255, 255, 255, 0.1);
-        animation: float 8s ease-in-out infinite;
-      }
-
-      .modal-glass {
-        background: rgba(255, 255, 255, 0.95);
-        backdrop-filter: blur(20px);
-        border: 1px solid rgba(255, 255, 255, 0.3);
-      }
-
-      .profile-img {
-        transition: all 0.3s ease;
-        border: 3px solid rgba(255, 255, 255, 0.3);
-      }
-
-      .profile-img:hover {
-        transform: scale(1.1);
-        border-color: rgba(255, 255, 255, 0.6);
-      }
-
-      .tag {
-        background: linear-gradient(135deg, rgba(62, 146, 204, 0.8), rgba(10, 36, 99, 0.8));
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.2);
-      }
-
-      .social-link {
-        transition: all 0.3s ease;
-      }
-
-      .social-link:hover {
-        transform: scale(1.1);
-        text-shadow: 0 0 10px rgba(62, 146, 204, 0.5);
-      }
-
-      @keyframes pulse {
-        0%, 100% { opacity: 1; }
-        50% { opacity: 0.5; }
-      }
-
-      .pulse-animation {
-        animation: pulse 2s ease-in-out infinite;
-      }
-
-      .gradient-text {
-        background: linear-gradient(135deg, #3E92CC, #0A2463);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-      }
-
-      .hero-title {
-        font-size: 4rem;
-        font-weight: 700;
-        text-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      }
-
-      @media (max-width: 768px) {
-        .hero-title {
-          font-size: 2.5rem;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body class="min-h-screen">
@@ -441,172 +309,6 @@
       <p class="opacity-80">&copy; 2025 IIT Patna. All rights reserved.</p>
     </footer>
 
-    <script>
-      let editingIndex = null;
-      let interns = [];
-
-      function previewImage(event) {
-        const preview = document.getElementById("preview");
-        const file = event.target.files[0];
-
-        if (file) {
-          const reader = new FileReader();
-          reader.onload = function (e) {
-            preview.src = e.target.result;
-          };
-          reader.readAsDataURL(file);
-        }
-      }
-
-      function openModal(id) {
-        document.getElementById(`${id}-modal`).classList.remove("hidden");
-        document.body.style.overflow = 'hidden';
-      }
-
-      function closeModal(id) {
-        document.getElementById(`${id}-modal`).classList.add("hidden");
-        document.body.style.overflow = 'auto';
-        editingIndex = null;
-        document.getElementById("addInternForm").reset();
-        document.getElementById("preview").src = "https://api.dicebear.com/6.x/initials/svg?seed=New User";
-      }
-
-      function renderInternCard(intern, index) {
-        const card = document.createElement("div");
-        card.className = "glass-card rounded-2xl p-6 text-white animate-fade-in";
-
-        card.innerHTML = `
-          <div class="text-center">
-            <img 
-              src="${intern.image || `https://api.dicebear.com/6.x/initials/svg?seed=${intern.name}`}" 
-              alt="${intern.name}" 
-              class="profile-img w-24 h-24 rounded-full mx-auto mb-4 object-cover"
-            >
-            <h3 class="text-xl font-bold mb-2">${intern.name}</h3>
-            <p class="opacity-80 mb-4">${intern.university} | ${intern.batch}</p>
-            
-            <div class="flex justify-center gap-2 mb-4 flex-wrap">
-              <span class="tag text-xs px-3 py-1 rounded-full">${intern.project}</span>
-              <span class="tag text-xs px-3 py-1 rounded-full">${intern.duration}</span>
-            </div>
-
-            <div class="flex justify-center gap-4 mb-4">
-              ${intern.linkedin ? `<a href="${intern.linkedin}" target="_blank" class="social-link text-blue-300 hover:text-blue-100">
-                <i class="ri-linkedin-fill text-xl"></i>
-              </a>` : ''}
-              ${intern.github ? `<a href="${intern.github}" target="_blank" class="social-link text-purple-300 hover:text-purple-100">
-                <i class="ri-github-fill text-xl"></i>
-              </a>` : ''}
-            </div>
-
-            <div class="flex justify-center gap-2">
-              <button onclick="editIntern(${index})" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full text-sm transition-colors">
-                <i class="ri-edit-line"></i> Edit
-              </button>
-              <button onclick="deleteIntern(${index})" class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded-full text-sm transition-colors">
-                <i class="ri-delete-bin-line"></i> Delete
-              </button>
-            </div>
-          </div>
-        `;
-
-        return card;
-      }
-
-      function editIntern(index) {
-        const intern = interns[index];
-
-        document.getElementById("name").value = intern.name;
-        document.getElementById("university").value = intern.university;
-        document.getElementById("batch").value = intern.batch;
-        document.getElementById("duration").value = intern.duration;
-        document.getElementById("project").value = intern.project;
-        document.getElementById("linkedin").value = intern.linkedin || '';
-        document.getElementById("github").value = intern.github || '';
-        document.getElementById("preview").src = intern.image || `https://api.dicebear.com/6.x/initials/svg?seed=${intern.name}`;
-
-        editingIndex = index;
-        openModal("add-intern");
-      }
-
-      function deleteIntern(index) {
-        if (confirm("Are you sure you want to delete this intern?")) {
-          interns.splice(index, 1);
-          renderAllInterns();
-          updateStats();
-        }
-      }
-
-      function renderAllInterns() {
-        const grid = document.getElementById("internGrid");
-        grid.innerHTML = "";
-        
-        interns.forEach((intern, index) => {
-          const card = renderInternCard(intern, index);
-          grid.appendChild(card);
-        });
-      }
-
-      function updateStats() {
-        document.getElementById("totalInterns").textContent = interns.length;
-      }
-
-      document.getElementById("addInternForm").addEventListener("submit", function (e) {
-        e.preventDefault();
-
-        const intern = {
-          name: document.getElementById("name").value,
-          university: document.getElementById("university").value,
-          batch: document.getElementById("batch").value,
-          duration: document.getElementById("duration").value,
-          project: document.getElementById("project").value,
-          linkedin: document.getElementById("linkedin").value,
-          github: document.getElementById("github").value,
-          image: document.getElementById("preview").src,
-        };
-
-        if (editingIndex !== null) {
-          interns[editingIndex] = intern;
-        } else {
-          interns.push(intern);
-        }
-
-        renderAllInterns();
-        updateStats();
-        closeModal("add-intern");
-      });
-
-      function exportToCSV() {
-        if (interns.length === 0) {
-          alert("No interns to export!");
-          return;
-        }
-
-        const header = Object.keys(interns[0]);
-        const rows = interns.map((intern) =>
-          header
-            .map((key) => `"${(intern[key] || "").replace(/"/g, '""')}"`)
-            .join(",")
-        );
-
-        const csvContent = [header.join(","), ...rows].join("\n");
-        const blob = new Blob([csvContent], {
-          type: "text/csv;charset=utf-8;",
-        });
-        const url = URL.createObjectURL(blob);
-
-        const a = document.createElement("a");
-        a.href = url;
-        a.download = "interns.csv";
-        a.click();
-        URL.revokeObjectURL(url);
-      }
-
-      // Initialize
-      window.addEventListener("DOMContentLoaded", function() {
-        renderAllInterns();
-        updateStats();
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
