--- a/index.html
+++ b/index.html
@@ -243,6 +243,17 @@
           </div>
 
           <div class="space-y-2">
+            <label class="block text-sm font-semibold text-gray-700">Email Address</label>
+            <input
+              type="email"
+              id="email"
+              placeholder="Enter email address"
+              required
+              class="w-full border-2 border-gray-200 rounded-xl px-4 py-3 focus:border-blue-500 focus:outline-none transition-colors"
+            />
+          </div>
+
+          <div class="space-y-2">
             <label class="block text-sm font-semibold text-gray-700">Project Title</label>
             <input
               type="text"
